# blockchain/block_handler.go
@@ -1,6 +1,8 @@
 package main
 
 import (
+	"fmt"
+	"github.com/ethereum/go-ethereum/common"
 	"github.com/gin-gonic/gin"
 	"net/http"
 	"strconv"
@@ -16,6 +18,7 @@ func NewBlockHandler(router *gin.RouterGroup, blockRepository BlockRepository) {
 	}
 	block := router.Group("/block")
 	block.GET("/get", handler.GetBlocks)
+	block.GET("/:number", handler.GetBlockBytesByNumber)
 }
 
 // GetBlocks godoc
@@ -55,5 +58,47 @@ func (bh *BlockHandler) GetBlocks(c *gin.Context) {
 		return
 	}
 	c.JSON(http.StatusOK, NewResponseSuccess(blocks))
+	return
+}
+
+// GetBlockBytesByNumber godoc
+// @Summary      Get Block as by Byte array representation given a block number
+// @Description  Get Block as by Byte array representation given a block number
+// @Tags         Block
+// @Produce      json
+// @Param        number        path      int  true   "Number"
+// @Success      200          {object}  ResponseSuccess
+// @Failure      200          {object}  ResponseFail
+// @Router       /block/{number} [get]
+func (bh *BlockHandler) GetBlockBytesByNumber(c *gin.Context) {
+	numberStr := c.Param("number")
+	number := uint64(0)
+	var err error
+	fmt.Println(numberStr)
+	if numberStr != "" {
+		number, err = strconv.ParseUint(numberStr, 10, 64)
+		if err != nil {
+			c.JSON(http.StatusOK, NewResponseFail(ERROR_BAD_LIMIT, numberStr))
+			return
+		}
+	}
+	block, has, err := bh.blockRepository.GetBlockByNumber(number)
+	if err != nil {
+		c.JSON(http.StatusOK, NewResponseFail(ERROR_REPOSITORY, err))
+		return
+	}
+	if !has {
+		c.JSON(http.StatusOK, NewResponseFail(ERROR_NOT_FOUND, fmt.Sprintf("block not found: block=%d", number)))
+		return
+	}
+	m := make(map[string]interface{})
+	m["block"] = block
+	blockBytes, err := block.toBytes()
+	if err != nil {
+		c.JSON(http.StatusOK, NewResponseFail(ERROR_BAD_DATA, fmt.Sprintf("bad block: block=%d - error=%+v", number, err)))
+		return
+	}
+	m["blockBytes"] = fmt.Sprintf("%v", common.Bytes2Hex(blockBytes))
+	c.JSON(http.StatusOK, NewResponseSuccess(m))
 	return
 }
